# cyan-skillfish-governor

./: COOLERCONTROL_INTEGRATION.md  Cargo.toml  GPU_SENSOR_README.md  INSTALLATION_PROCESS_AWARE.md  README.md  SET_GPU_FREQ_README.md  cyan-skillfish-governor.service  default-config.toml  gpu-sensor.service  install.sh  install_gpu_sensor.sh  install_process_aware.sh  install_set_gpu_freq.sh  process-aware-governor.service  rebuild_and_reload.sh  set_gpu_freq.sh  show_gpu_freqs.sh  test_gpu_sensor.sh  uninstall_cyan_skillfish.sh  uninstall_gpu_sensor.sh  uninstall_process_aware.sh
examples/: adaptive_gpu_governor.rs  cpu_load_monitor.rs  gpu_process_list.rs  gpu_usage_monitor.rs  gpu_usage_per_process.rs  process_aware_governor.rs  process_aware_governor_old.rs
src/: governor.rs  gpu_info.rs  gpu_sensor.rs  lib.rs  load_monitor.rs  main.rs  process_detection.rs  process_monitor.rs  profile_db.rs
