[package]
name = "cyan-skillfish-governor"
version = "0.2.0"
license = "MIT"
edition = "2024"

[dependencies]
libdrm_amdgpu_sys = "0.8.8"
toml = "0.9.5"
watch = "0.2.3"
dirs = "5.0"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "gpu_usage_monitor"
path = "examples/gpu_usage_monitor.rs"

[[example]]
name = "gpu_process_list"
path = "examples/gpu_process_list.rs"

[[example]]
name = "gpu_usage_per_process"
path = "examples/gpu_usage_per_process.rs"

[[example]]
name = "process_aware_governor"
path = "examples/process_aware_governor.rs"
